# fms-guardrails-orchestrator

./: Cargo.toml  pyproject.toml
docs/api/: openai_chat_completions.yaml
examples/: python_orchestrator.py
src/: config.rs  lib.rs  models.rs  orchestrator.rs
src/clients/: detector.rs
src/orchestrator/: chat_completions_detection.rs
src/orchestrator/types/detection_batcher/: chat_completion.rs
